--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "moment": "^2.17.1",
-    "react": "^15.4.1",
-    "react-native": "~0.41.0",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.4",
     "react-native-pathjs-charts": "file:../",
     "react-native-side-menu": "^0.20.1"
   },
