--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "babel-polyfill": "^6.23.0",
     "lodash": "^4.12.0",
     "paths-js": "^0.4.5",
-    "react-native-svg": "~4.5.0"
+    "prop-types": "^15.6.0",
+    "react-native-svg": "5.4.1"
   },
   "devDependencies": {
     "babel-jest": "*",
@@ -48,8 +49,8 @@
     "diff": "^3.1.0",
     "jest": "^18.0.0",
     "jest-react-native": "*",
-    "react": "~15.4.1",
-    "react-native": "~0.41.0",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.4",
     "react-test-renderer": "*"
   },
   "jest": {
